--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<div id="portfolio">
         <ul>
             <li id='exit-velo-xba'>
-                      <img class="portfolio_pic" src="xba-chart.svg">
+                      <img class="portfolio_pic" src="xba-chart-1.png">
                       <p class="headline"><a href="https://bryan-baker.github.io/exit-velo-xba/"><b>MLB: Why does exit velocity matter?</b></a></p>
                       <p class="tools">Tools: Python, Excel, Datawrapper, Canva</p>
                       <p class="tools">Sep. 1, 2022</p>
