--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="Bryan Baker - Portfolio">
   <meta name="keywords" content="Bryan Baker, Data, Visualization, Graphics, New York">
   <meta name="author" content="Bryan Baker">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
