--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
 	<div id="portfolio">
         <ul>
             <li id='exit-velo-xba'>
-                      <img class="portfolio_pic" src="xba-chart-1.png">
+                      <a class='no_undersocre'  href="https://bryan-baker.github.io/exit-velo-xba/"><img class="portfolio_pic" src="xba-chart-1.png">
                       <p class="headline"><a href="https://bryan-baker.github.io/exit-velo-xba/"><b>MLB: Why does exit velocity matter?</b></a></p>
                       <p class="tools">Tools: Python, Excel, Datawrapper, Canva</p>
                       <p class="tools">Sep. 1, 2022</p>
             </li>
             <li id='winning-pace-yankees'>
-                      <img class="portfolio_pic" src="run-diff.png">
+                      <a class='no_undersocre' href="https://bryan-baker.github.io/winning-pace-yankees/"><img class="portfolio_pic" src="run-diff.png">
                       <p class="headline"><a href="https://bryan-baker.github.io/winning-pace-yankees/"><b>How do the 2022 Yankees stack up against other legendary teams from the past?</b></a></p>
                       <p class="tools">Tools: Python, Selenium, Github Actions, Datawrapper</p>
                       <p class="tools">August 12, 2022</p>
             </li>
             <li id='home-run-probability'>
-                      <img class="portfolio_pic" src="hr-prob.png">
+                      <a class='no_undersocre' href="https://bryan-baker.github.io/home-run-prob/"><img class="portfolio_pic" src="hr-prob.png">
                       <p class="headline"><a href="https://bryan-baker.github.io/home-run-prob/"><b>MLB's new ball has negatively affected the home run rate</b></a></p>
                       <p class="tools">Tools: Python, Pybaseball, Datawrapper, Adobe Illustrator</p>
                       <p class="tools">July 20, 2022</p>
