--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <ul>
             <li id='exit-velo-xba'>
                       <a class='no_undersocre'  href="https://bryan-baker.github.io/exit-velo-xba/"><img class="portfolio_pic" src="xba-chart-1.png">
-                      <p class="headline"><a href="https://bryan-baker.github.io/exit-velo-xba/"><b>MLB: Why Does Exit Velocity Matter?</b></a></p>
+                      <p class="headline"><a href="https://bryan-baker.github.io/exit-velo-xba/"><b>The Importance of Exit Velocity and Batted Ball Data</b></a></p>
                       <p class="tools">Tools: Python, Excel, Datawrapper, Canva</p>
                       <p class="tools">Sep. 1, 2022</p>
             </li>
             <li id='winning-pace-yankees'>
                       <a class='no_undersocre' href="https://bryan-baker.github.io/winning-pace-yankees/"><img class="portfolio_pic" src="run-diff.png">
-                      <p class="headline"><a href="https://bryan-baker.github.io/winning-pace-yankees/"><b>How Do the 2022 Yankees Stack Up Against Other Legendary Teams From the Past?</b></a></p>
+                      <p class="headline"><a href="https://bryan-baker.github.io/winning-pace-yankees/"><b>How Do the 2022 Yankees Stack Up Against Other Legendary Teams from the Past?</b></a></p>
                       <p class="tools">Tools: Python, Selenium, Github Actions, Datawrapper</p>
                       <p class="tools">August 12, 2022</p>
             </li>
