--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <ul>
             <li id='exit-velo-xba'>
                       <a class='no_undersocre'  href="https://bryan-baker.github.io/exit-velo-xba/"><img class="portfolio_pic" src="xba-chart-1.png">
-                      <p class="headline"><a href="https://bryan-baker.github.io/exit-velo-xba/"><b>The Importance of Exit Velocity and Batted Ball Data</b></a></p>
+                      <p class="headline"><a href="https://bryan-baker.github.io/exit-velo-xba/"><b>MLB: The Importance of Exit Velocity and Batted Ball Data</b></a></p>
                       <p class="tools">Tools: Python, Excel, Datawrapper, Canva</p>
                       <p class="tools">Sep. 1, 2022</p>
             </li>
