--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
                       <p class="tools">Tools: Python, Pybaseball, Datawrapper, Adobe Illustrator</p>
                       <p class="tools">July 20, 2022</p>
             </li>
-            <!--<li id='abortion'>
-                      <img class="portfolio_pic" src="assets/project_photo/12_abortion.png">
-                      <p class="headline"><a href="https://www.theglobeandmail.com/canada/article-abortion-pill-obstacles-how-doctors-reluctance-and-long-distance/">Healthcare: Abortion-pill obstacles: How doctors’ reluctance and long-distance travel stop many Canadians from getting Mifegymiso</a></p>
-                      <p class="tools">Tools: Excel, Adobe Illustrator</p>
-                      <p class="tools">July 13, 2019</p>
-            </li> -->
+            <li id='fear-the-bow'>
+                      <img class="no_undersocre" src="bella.png">
+                      <p class="headline"><a href="https://www.youtube.com/watch?v=fOFfJQKUEoY">Fear The Bow: Bella Vargas Sports Documentary</a></p>
+                      <p class="tools">Tools: Adobe Premiere Pro</p>
+                      <p class="tools">May 24, 2022</p>
+            </li>
 
 
 
