--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                       <p class="tools">July 20, 2022</p>
             </li>
             <li id='fear-the-bow'>
-                      <img class="no_undersocre" src="bella.png">
+                      <a class='no_undersocre'  href="https://www.youtube.com/watch?v=fOFfJQKUEoY"><img class="portfolio_pic" src="bella.png">
                       <p class="headline"><a href="https://www.youtube.com/watch?v=fOFfJQKUEoY">Fear The Bow: Bella Vargas Sports Documentary</a></p>
                       <p class="tools">Tools: Adobe Premiere Pro</p>
                       <p class="tools">May 24, 2022</p>
