--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </li>
             <li id='fear-the-bow'>
                       <a class='no_undersocre'  href="https://www.youtube.com/watch?v=fOFfJQKUEoY"><img class="portfolio_pic" src="bella.png">
-                      <p class="headline"><a href="https://www.youtube.com/watch?v=fOFfJQKUEoY">Fear The Bow: Bella Vargas Sports Documentary</a></p>
+                      <p class="headline"><a href="https://www.youtube.com/watch?v=fOFfJQKUEoY"><b>Fear The Bow: Bella Vargas Sports Documentary</b></a></p>
                       <p class="tools">Tools: Adobe Premiere Pro</p>
                       <p class="tools">May 24, 2022</p>
             </li>
