--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 	<div id="nav">
 	  <a href="https://bryan-baker.github.io/" class="no_undersocre">Home</a>
-	  <a href="baker-resume.pdf" class="no_undersocre">Resume</a>
+	  <a href="bryan-baker-resume.pdf" class="no_undersocre">Resume</a>
       <a href="https://yankeesavant.substack.com/" class="no_undersocre">Newsletter</a>
 	</div>
 
