--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
                       <p class="tools">Tools: Adobe Premiere Pro</p>
                       <p class="tools">May 24, 2022</p>
             </li>
+            <li id='westlake-dei'>
+              <a class='no_undersocre'  href="https://bryan-baker.github.io/westlake-dei/"><img class="portfolio_pic" src="dei-pic.jpeg">
+              <p class="headline"><a href="https://bryan-baker.github.io/westlake-dei/"><b>Community Concerns Surrounding Westlake's New Diversity Initiative</b></a></p>
+              <p class="tools">November 2, 2021</p>
+            </li>
 
 
 
