--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 	  <a href="https://twitter.com/YankeeSavant" class="no_undersocre"><img src="twitter.png" width="1" height="1" border="0"/></a>
 	  <a href="https://github.com/bryan-baker" class="no_undersocre"><img src="github.png" width="1" height="1" border="0"/></a>
 	  <a href="https://www.linkedin.com/in/bryan-william-baker-833130238/" class="no_undersocre"><img src="linkedin.png" width="1" height="1" border="0"/></a>
-      <a href="https://yankeesavant.substack.com/" class="no_undersocre"><img src="substack.png" width="1" height="1" border="0"/></a>
+    <a href="https://yankeesavant.substack.com/" class="no_undersocre"><img src="substack.png" width="1" height="1" border="0"/></a>
+    <a href="https://www.youtube.com/channel/UCZet1rYGgAxvdmnzMunReig" class="no_undersocre"><img src="youtube.png" width="1" height="1" border="0"/></a>
 	</div>
 
 
