--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	  <a href="https://bryan-baker.github.io/" class="no_undersocre">Home</a>
 	  <a href="bryan-baker-resume.pdf" class="no_undersocre">Resume</a>
       <a href="https://yankeesavant.substack.com/" class="no_undersocre">Newsletter</a>
+      <a href="" class="no_undersocre">Design</a>
 	</div>
 
 	<div class="intro">
