--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	                <br>
 	                <p class="intro_text">I studied <b>journalism</b> and <b>sports media</b> at the University of Texas at Austin.</p>
                     <p class="intro_text">I learned <b>coding</b> and <b>data visualization</b> at Columbia Journalism School's <a href="http://ledeprogram.com" target="_blank">Lede Program</a> in 2022.</p>
-	                <p class="intro_text">I write, code, design and create content for social media.</a></p>
+	                <p class="intro_text">I write, code, design, edit and create content for social media.</a></p>
 	                <br>
 	            </div>
 	        </div>
