--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	            <div class="text-center">
 	                <h1 class="name-wrapper">Bryan Baker </h1>
 	                <br>
-	                <p class="intro_text"><b>Assistant Podcast Producer & Editor</b> at <b><a href="https://www.instagram.com/friday.beers/?hl=en" target="_blank">Friday Beers.</a></b></p>
+	                <p class="intro_text"><b>Podcast Producer & Editor</b> at <b><a href="https://www.instagram.com/friday.beers/?hl=en" target="_blank">Friday Beers.</a></b></p>
                     <p class="intro_text">I studied <b>journalism</b> and <b>sports media</b> at the University of Texas at Austin.</p>
 	                <p class="intro_text">I write, code, design, edit and create content for social media.</a></p>
 	                <br>
